scrollbar fix

--- a/css/style.sass
+++ b/css/style.sass
@@ -50,7 +50,6 @@ main
 		-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3)
 	&::-webkit-scrollbar-thumb
 		background-color: red
-		outline: 1px solid slategrey
 	h1
 		text-align: center
 		width: 80%
